# Cofre

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DELIVERY_SUMMARY.md  DEPLOYMENT.md  FIX_DEPLOYMENT.md  FIX_PGVECTOR.md  FIX_VERCEL_BUILD.md  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_FIRST.txt  SETUP_INSTRUCTIONS.md  START_HERE.md  TYPESCRIPT_FIXES.md  WHAT_YOU_HAVE.md
.kiro/hackathon/: design.md  requirements.md  tasks.md
.kiro/specs/cofre-vault-platform/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/vector-semantic-graph-rag-chat/: .config.kiro  COMPLETED.md  design.md  requirements.md  (+2 more)
api/: .env.example  .eslintrc.json  .gitignore  API.md  README.md  package.json  tsconfig.json  vercel.json
api/src/: config.ts  constants.ts  index.ts  logger.ts
examples/: transcribe_audio.rs
migrations/: 001_pgvector.sql
reports/: C0743_1 (audio-extractor.net).md  C0744_1 (audio-extractor.net).md  C0746_1 (audio-extractor.net).md  Entrevista 001.md  Entrevista 002.md  Entrevista 003.md  Entrevista 004.md  Entrevista 005.md  Entrevista 006.md  Entrevista 007.md  Entrevista 009.md  Hexagonos evento mati.md  Input_ que voy a hacer mie.s Terret.md  Notas 010.md  Notas 012.md  Notas 013.md  Notas 014.md  Primer caso video primer video.md  Voz 005.md  Voz 041(1).md  Voz 044.md  Voz 045.md
src/: db.rs  error.rs  lib.rs  models.rs
src/services/: audio.rs  auth.rs  content.rs  elevenlabs.rs  embedding.rs  graph.rs  mod.rs  rag_chat.rs  tag.rs  vault.rs
static/: index.html
tests/: elevenlabs_integration.rs
(+34 files in other folders)
