[package]
name = "cofre-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.4", features = ["sqlx"] }
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
rfd = "0.14"
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[[bin]]
name = "cofre"
path = "src/bin/cofre.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"
